report4/doc/implementatiemodel/vkbo/onderneming/v0.0.5/oslo-converter-ea.report.md
#||# oslo-converter-ea for diagram OSLO-Organisatie-IMPL

#||# -------------------------------------

2026-05-19T18:25:15.548Z info: Connector Model:W3C-LOCN:Adresvoorstelling:(Adresvoorstelling -> Adres) is not an association with a source role. Ignoring this connector.

2026-05-19T18:25:15.551Z info: Connector Model:SF:Punt:(Punt -> Geometrie) is not an association with a source role. Ignoring this connector.

2026-05-19T18:25:15.551Z info: Connector Model:W3C-REGORG:GeregistreerdeOrganisatie:(GeregistreerdeOrganisatie -> Veranderingsgebeurtenis) is not an association with a source role. Ignoring this connector.

2026-05-19T18:25:15.551Z info: Connector Model:OSLO-Organisatie:Stopzetting:(Stopzetting -> Veranderingsgebeurtenis) is not an association with a source role. Ignoring this connector.

2026-05-19T18:25:15.551Z info: Connector Model:W3C-Time:Moment:(Moment -> TemporeleEntiteit) is not an association with a source role. Ignoring this connector.

2026-05-19T18:25:15.551Z info: Connector Model:W3C-Time:Periode:(Periode -> TemporeleEntiteit) is not an association with a source role. Ignoring this connector.

2026-05-19T18:25:15.551Z info: Connector Model:EU-M8G:Oprichting:(Oprichting -> Veranderingsgebeurtenis) is not an association with a source role. Ignoring this connector.

2026-05-19T18:25:15.552Z info: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model). Using fallback URI (http://todo.com/) instead.

2026-05-19T18:25:15.552Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model:Belgif). Using fallback URI (http://todo.com/) instead.

2026-05-19T18:25:15.553Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model:OSLO-Adres). Using fallback URI (http://todo.com/) instead.

2026-05-19T18:25:15.553Z warn: [PackageConverterHandler]: No value found for tag "baseURI" in package (Model:SF). Using fallback URI (http://todo.com/) instead.

2026-05-19T18:25:15.562Z warn: [ConverterHandler]: Entity with path Model:OSLO-Organisatie:Doorhaling:^tijd has already a value for ap-label-nl in language nl, but will be overwritten.

2026-05-19T18:25:15.562Z error: [AttributeConverterHandler]: Unable to determine the range for attribute (Model:OSLO-Adres:Adres:positie).

#||# -------------------------------------

